--- a/src/views/_mixins/page-search-bar.pug
+++ b/src/views/_mixins/page-search-bar.pug
@@ -14,9 +14,10 @@ mixin pageSearchBar(params)
     div(class="grid gap-6 mb-6 md:grid-cols-6 align-text-bottom")
       for item, no in params
         +_pageSearchBarItem(item)
-      label(for=`btnPageSearchBar` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 조회하기
-        button(type="submit" id=`btnPageSearchBar` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) SEARCH
-      //- button(type="submit" id='btnSearch' class="stext-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800") SEARCH
+      if(params.length>0)
+        label(for=`btnPageSearchBar` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 조회하기
+          button(type="submit" id=`btnPageSearchBar` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) SEARCH
+        //- button(type="submit" id='btnSearch' class="stext-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800") SEARCH
 
 mixin pageSearchBarSingle(param)
   label(for="search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-gray-300")
