--- a/src/views/_mixins/page-search-bar.pug
+++ b/src/views/_mixins/page-search-bar.pug
@@ -4,7 +4,7 @@
 mixin _pageSearchBarItem(param)
   div
     label(for=`${param.id}` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") #{param.label}
-      input(type="text" id=`${param.id}` name=`${param.id}` class=`bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500` placeholder=`${param.placeholder}` value=`${param.value?param.value:''}`)
+      input(type="text" id=`${param.id}` name=`${param.id}` class=`search-bar-item bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500` placeholder=`${param.placeholder}` value=`${param.value?param.value:''}`)
   
 mixin pageSearchBar(params)
   form(method='get' id="formPageSearchBar")
@@ -17,6 +17,9 @@ mixin pageSearchBar(params)
       if(params.length>0)
         label(for=`btnPageSearchBar` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 조회하기
           button(type="submit" id=`btnPageSearchBar` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) SEARCH
+        label(for=`btnPageDownload` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 다운로드
+          button(type="submit" id=`btnPageDownload` formaction=`/${domain}/${seq}/download` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) SEARCH
+
         //- button(type="submit" id='btnSearch' class="stext-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800") SEARCH
 
 mixin pageSearchBarSingle(param)
