하위 페이지 목록 보여주기 구현

--- a/src/views/pg/pg0002.pug
+++ b/src/views/pg/pg0002.pug
@@ -1,6 +1,6 @@
-//- file : index.pug
+//- file : pg0002.pug
 //- title : MODIFY_PAGE_TITLE
-//- @since 2022-08-31T11:27:53.879Z (UTC)
+//- @since 2022-09-06T14:27:55.651Z (UTC)
 extends ../layout
 
 block content
@@ -10,4 +10,4 @@ block content
 	+pageFooter()
 
 block scripts 
-	script(src='/js/pg/index.js')
+	script(src='/js/pg/pg0002.js')
