--- a/src/views/_mixins/page-list.pug
+++ b/src/views/_mixins/page-list.pug
@@ -10,7 +10,14 @@ mixin _pageListBody(rows, headers)
       each itemr, nor in rows
         tr(class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600")
         each itemh, noh in headers
-          td(class="py-4 px-6") #{itemr[headers[noh]]}
+          if headers[noh] == 'domain_no' 
+            td(class="py-4 px-6") 
+              a(href=`/${itemr[headers[noh]]}`) #{itemr[headers[noh]]}
+          else if headers[noh] == 'page_no' 
+            td(class="py-4 px-6") 
+              a(href=`/${itemr['domain_no']}/${itemr[headers[noh]]}`) #{itemr[headers[noh]]}
+          else
+            td(class="py-4 px-6") #{itemr[headers[noh]]}
 
 mixin pageList(rows, headers)
   div(class="overflow-x-auto relative shadow-md sm:rounded-lg")
