--- a/src/views/_mixins/page-header.pug
+++ b/src/views/_mixins/page-header.pug
@@ -1,8 +1,14 @@
 //- page-header.pug
 mixin pageHeader(domain, seq, desc)
   h1(class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl")
-    span(class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400")=domain
+    span(class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400") #{domain} 
     | #{seq}
-  p(class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400")=desc
+  p(class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400") #{desc} 
+    if domain== 'all'
+      span &nbsp;
+    else if seq == ''
+      a(href=`/`) 🔼
+    else 
+      a(href=`/${domain}`) 🔼
   br
   br  
