--- a/src/views/_mixins/page-search-bar.pug
+++ b/src/views/_mixins/page-search-bar.pug
@@ -18,7 +18,8 @@ mixin pageSearchBar(params)
         label(for=`btnPageSearchBar` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 조회하기
           button(type="submit" id=`btnPageSearchBar` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) SEARCH
         label(for=`btnPageDownload` class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300") 다운로드
-          button(type="submit" id=`btnPageDownload` formaction=`/${domain}/${seq}/download` class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) DOWNLOAD
+          //- button(type="submit" id=`btnPageDownload`  formaction=`/${domain}/${seq}/download` disabled class=`stext-white bg-blue-700 hover:bg-blue-800 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5`) DOWNLOAD
+          button(type="submit" id=`btnPageDownload`  formaction=`/${domain}/${seq}/download` disabled class=`stext-white bg-gray-700 hover:bg-gray-800 border text-sm rounded-lg focus:ring-gray-500 focus:border-gray-500 block w-full p-2.5`) DOWNLOAD
 
         //- button(type="submit" id='btnSearch' class="stext-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800") SEARCH
 
