미리보기 추가

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,8 +1,18 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /* overflow: hidden; */
+    /* height: 100%; */
 }
 
 a {
   color: #00B7FF;
+}
+
+img.author{
+  max-width: 50px;
+}
+
+td.pointer{
+  cursor: pointer;
 }
